# harmonia

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
harmonia/: CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  __init__.py  checker.py  cli.py  pyproject.toml
harmonia/data/: pytorch.json  transformers.json
harmonia/harmonia/: __init__.py  checker.py  cli.py  database.py  detector.py
harmonia/harmonia/data/: pytorch.json  transformers.json
harmonia/tests/: test_core.py
tests/: test_core.py
