[project]
name = "harmonia-ml"
version = "0.3.1"
description = "..."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{ name = "Ahmed Eladl", email = "aeladl.dev@gmail.com" }]
keywords = ["pytorch", "transformers", "compatibility", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
harmonia = "harmonia.cli:main"

[project.urls]
Homepage = "https://github.com/ahmed-eladl/harmonia"
Repository = "https://github.com/ahmed-eladl/harmonia"
Issues = "https://github.com/ahmed-eladl/harmonia/issues"