[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonia-ml"
version = "0.3.1"
description = "Bring harmony to your ML dependency stack — detect GPU, CUDA, driver, and package conflicts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{ name = "Ahmed Eladl", email = "aeladl.dev@gmail.com" }]
keywords = ["pytorch", "transformers", "compatibility", "cuda", "versions", "dependency", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
harmonia = "harmonia.cli:main"

[project.urls]
Homepage = "https://github.com/ahmed-eladl/harmonia"
Repository = "https://github.com/ahmed-eladl/harmonia"
Issues = "https://github.com/ahmed-eladl/harmonia/issues"

[tool.setuptools.package-data]
harmonia = ["data/*.json"]

[tool.setuptools.packages.find]
include = ["harmonia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]